src/objects/Week_Sales_OnHand__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Weeks Sales OnHand</relationshipLabel>
        <relationshipName>Weeks_Sales_OnHand</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <description>Select business to filter the Segments available</description>
        <label>Business Group</label>
        <picklist>
            <picklistValues>
                <fullName>Motorola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lenovo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <picklist>
            <picklistValues>
                <fullName>Smart Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Companion Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wearable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WSOH_already_exists_for_this_Segment__c</fullName>
        <description>Unique field for WSOH Portfolio Segment.</description>
        <inlineHelpText>Unique field for WSOH Portfolio Segment.</inlineHelpText>
        <label>WSOH already exists for this Segment</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Week_Sales_OnHand_Segment__c</fullName>
        <label>Week Sales OnHand Segment</label>
        <picklist>
            <controllingField>Business__c</controllingField>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Week_Sales_OnHand_Target__c</fullName>
        <description>Ideal number of weeks of units in channel by product segment needed for steady sell-out (avoid stock out or excess channel inventory). Known as WSOH.</description>
        <inlineHelpText>Ideal number of weeks of units in channel by product segment needed for steady sell-out (avoid stock out or excess channel inventory). Known as WSOH.</inlineHelpText>
        <label>Week Sales OnHand Target</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Week Sales OnHand</label>
    <nameField>
        <displayFormat>WSOH-{000000}</displayFormat>
        <label>Week Sales OnHand ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weeks Sales OnHand</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>